# COMIND

./: .gitignore  README.md  pyproject.toml
COMIND_transformer/: __init__.py  brain_utils.py  em_transformer.py  model_generator.py  optimizer_beta.py  optimizer_theta_cluster.py  optimizer_theta_globals.py  sensitivity_lsoda.py  subject_EM.py  subtyping_em_transformer.py  synthetic_data_generator.py  utils.py  visualization.py
COMIND_transformer/features/: beta_glm.py
notebooks/: example_synthetic_data_experiment.ipynb  validate_model.ipynb
notebooks/deprecated/: example_PPMI_experiment.ipynb  example_synthetic_data_experiment.ipynb  view_results.ipynb
notebooks/example-demos/: subtyping-syntheticdata-demo.ipynb
notebooks/synthetic-experiments/: 3-11-2026_kappa_test.ipynb  3-27-2026_exprb2_test.ipynb  3-31-2026_ormatex.ipynb  4-13-2026_huber.ipynb  4-15-2026_L1_test.ipynb
results/: ppmi_gridsearch_results.npz  ppmi_single_fit.npz
