[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "COMIND"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["COMIND_transformer*"]